Switch to Java 16.